--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase-admin": "^12.0.0",
     "mercadopago": "^2.8.0",
     "node-fetch": "^2.6.7",
-    "firebase-functions": "^4.4.1"
+    "firebase-functions": "^4.4.1",
+    "axios": "^1.6.7"
   },
   "main": "index.js",
   "keywords": [],
