--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "node api/chat.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.4.1",
     "mercadopago": "^2.8.0",
-    "node-fetch": "^2.6.7",
-    "firebase-functions": "^4.4.1"
+    "node-fetch": "^2.6.7"
   },
   "main": "index.js",
   "keywords": [],
