--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,13 @@
 			"command": "python -m http.server 3000",
 			"isBackground": true,
 			"group": "build"
+		},
+		{
+			"label": "Servir projeto PROD.AI",
+			"type": "shell",
+			"command": "python -m http.server 3000",
+			"isBackground": true,
+			"group": "build"
 		}
 	]
 }
